--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		
 		<nav class="primary_nav main_nav_border">
 			<div class="primary_nav_flex">
-				<div class="primary_nav_logo">
-					<a class="primary_nav_logo_link" href="index.html">LOGO</a>
+				<div class="primary_nav_logo" style="text-align: center;">
+					<a class="primary_nav_logo_link" href="index.html"><img src="img/sitelogo.png" alt="siteLogo" width="50%"></a>
 				</div>
 				<ul class="primary_nav_ul primary_nav_effect">
 					<li class="primary_nav_item primary_nav_current"><a class="primary_nav_item_link" href="index.html">Home</a></li>
@@ -28,35 +28,41 @@
 
 			<div class="homepage_part01_grid">
 				<div class="homepage_bg_intro typing_name">
-					<h1 class="bg_first_header">Hello. My Name is Ching Ching Lee.</h1>
+					<h1 class="bg_first_header">Hello.<br>My Name is ChingChing Lee.</h1>
 				</div>
 				<div class="homepage_bg_logo">
-					<img src="#">
+					<img src="img/homepage_logo.png" alt="myName">
 				</div>
 
-				<div class="scrolling_svg" style="text-align: center;">
-					put svg here
+				<div class="shomepage_intro_svg" style="text-align: center;">
+					<a class="homepage_intro_scroll_part02" href="#homepage_part02">
+						<svg class="scrollDown" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.43 62.93" width="2%">
+						  <rect x=".5" y=".5" width="38.43" height="61.93" rx="19.21" ry="19.21" stroke="#a9a9a9" fill="none" stroke-miterlimit="10"/>
+						  <path stroke="#de1b1b" stroke-linecap="round" fill="none" stroke-miterlimit="10" d="M19.71 9.28v11.37"/>
+						</svg>
+					</a>
+					
 				</div>
 			</div>
 				
 
 			
-			<div class="homepage_part02_grid">
+			<div id="homepage_part02" class="homepage_part02_grid">
 				<div class="homepage_aboutme_intro">
 					<h2 class="bg_second_header homepage_aboutme_intro_flex">I am a</h2>
 					<h2 class="bg_second_header homepage_aboutme_intro_flex">Graphic</h2>
 					<h2 class="bg_second_header homepage_aboutme_intro_flex">&#38;</h2>
 					<h2 class="bg_second_header hhomepage_aboutme_intro_flex">Web Designer</h2>
 				</div>
-				<div class="homepage_aboutme_button round_btn">About Me</div>
+				<div class="homepage_aboutme_button round_btn"><a class="round_btn_link" href="about.html">About Me</a></div>
 			</div>
 
 			<div class="homepage_part03_grid">
-				<div class="homepage_work_intro homepage_work_intro_grid">
-					<h3 class="bg_third_header">Design</h3>
-					<h3 class="bg_third_header">&#38; Portfolio</h3>
+				<div class="homepage_work_intro_grid">
+					<h2 class="bg_second_header homepage_work_part1">Design</h2>
+					<h2 class="bg_second_header homepage_work_part2">&#38; Portfolio</h2>
 				</div>
-				<div class="homepage_work_gallery homepage_work_gallery_grid">
+				<div class="homepage_work_gallery_grid">
 					<div class="homepage_work_gallery_item">1</div>
 					<div class="homepage_work_gallery_item">2</div>
 					<div class="homepage_work_gallery_item">3</div>
