--- a/graphic.html
+++ b/graphic.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ching Ching | About</title>
+  <title>Ching Ching | Graphic Design</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -11,4 +11,3 @@
 
 </body>
 </html>
-
