index layout completed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
 			<div class="homepage_part01_grid">
 				<div class="homepage_bg_intro typing_name">
-					<h1 class="bg_first_header">Hello.<br>My Name is ChingChing Lee.</h1>
+					<h1 class="bg_first_header1 typing_header">Hello&excl;</h1>
+					<h1 class="bg_first_header2 typing_header">I AM CHING<br>CHING.</h1>
 				</div>
 				<div class="homepage_bg_logo">
 					<img src="img/homepage_logo.png" alt="myName">
@@ -52,13 +53,23 @@
 
 			
 			<div id="homepage_part02" class="homepage_part02_grid">
+				<div class="empty_border aboutme_empty_box01"></div>
+				<div class="empty_border aboutme_empty_bg_box"></div>
 				<div class="homepage_aboutme_intro">
-					<h2 class="bg_second_header homepage_aboutme_intro_flex">I am a</h2>
-					<h2 class="bg_second_header homepage_aboutme_intro_flex">Graphic</h2>
-					<h2 class="bg_second_header homepage_aboutme_intro_flex">&#38;</h2>
-					<h2 class="bg_second_header hhomepage_aboutme_intro_flex">Web Designer</h2>
+					<div class="aboutme_intro_text">
+						<h2 class="bg_second_header homepage_aboutme_intro_flex">I am a</h2>
+						<h2 class="bg_second_header homepage_aboutme_intro_flex">Graphic</h2>
+						<h2 class="bg_second_header homepage_aboutme_intro_flex">&#38;</h2>
+						<h2 class="bg_second_header hhomepage_aboutme_intro_flex">Web Designer</h2>
+					</div>
+					
+					<div class="homepage_aboutme_button round_btn">
+						<a class="round_btn_link" href="about.html">About Me</a>
+					</div>
 				</div>
-				<div class="homepage_aboutme_button round_btn"><a class="round_btn_link" href="about.html">About Me</a></div>
+				
+
+				<div class="empty_border aboutme_empty_box02"></div>
 			</div>
 
 			<div class="homepage_part03_grid">
@@ -68,7 +79,6 @@
 					<h2 class="bg_second_header homepage_work_part1">This is My Portfolio</h2>
 					<h2 class="bg_second_header homepage_work_part2 border_area">I Make Website<br>and<br>Design</h2>
 					<div class="empty_border intro_grid_empty_box03"></div>
-					<div class="empty_border intro_grid_empty_box04"></div>
 				</div>
 
 				<div class="main_gallery_grid">
