--- a/about.html
+++ b/about.html
@@ -1,14 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Ching Ching | About</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<title>Ching Ching | About Me</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 
+	<div class="page_container">
+		
+		
+		<nav class="primary_nav main_nav_border">
+			<div class="primary_nav_flex">
+				<div class="primary_nav_logo" style="text-align: center;">
+					<a class="primary_nav_logo_link" href="index.html"><img class="sitelogo" src="img/sitelogo.png" alt="siteLogo"></a>
+				</div>
+				<ul class="primary_nav_ul primary_nav_effect">
+					<li class="primary_nav_item"><a class="primary_nav_item_link" href="index.html">Home</a></li>
+					<li class="primary_nav_item"><a class="primary_nav_item_link" href="web.html">Website</a></li>
+					<li class="primary_nav_item"><a class="primary_nav_item_link" href="graphic.html">Graphic</a></li>
+					<li class="primary_nav_item"><a class="primary_nav_item_link" href="about.html">About</a></li>
+				</ul>
+			</div>
+			
+		</nav>
 
+		<div class="innerpage_context">
+			<div class="innerpage_part1">
+				<h2 class="innerpage_second_title">CHING</h2>
+				<h2 class="innerpage_second_title">CHING</h2>
+				<h2 class="innerpage_second_title">Lee</h2>
+				<div class="body_paragraph">
+					<p class="body_text">
+						I am Ching Ching Lee and I am a graphic designer as well as a web designer. I am currently completing the final year of my Bachelor of Fine Arts in New Media at the University of Lethbridge. My focus is on graphic design and web development. 
 
+					</p>
+					<p class="body_text">
+						I spent my childhood in Thailand and studies high school in Hong Kong before moving to Canada. And I also love to travel around the World. Travelling to different areas helps me to understand the different cultural perspectives and design trend. These experiences inspire me to insert many images and icons to be a communication media on my websites because they are easy to understand. I aim to create websites which can be used for all people not only a group of people through graphic design. 
+
+					</p>
+					<p class="body_text">
+						In Spring 2018, my web project “Reintroduction of Swift Fox” website won the title of the top undergraduate student project. “Reintroduction of Swift Fox” is a CSS and JavaScript Web design project which I created all my images and wrote my HTML, CSS, and JavaScript. This award made me believe in my skills and pushed me to explore more of the field of computer coding. 
+					</p>
+					<p class="body_text">
+						For the past two years, I have provided graphic design service for students and small companies. Since summer 2017, I have been working with a Lethbridge jewellery design company as a freelance designer to recreate their branding and website. 
+
+					</p>
+				</div>
+				<div class="download_resume_btn round_btn">
+						<a class="round_btn_link" href="#">Download My Resume</a>
+					</div>
+			</div>
+
+			<div class="empty_border innerpage_context_empty_box01"></div>	
+			<div class="empty_border innerpage_context_empty_box02"></div>	
+			
+			<div class="homepage_part04_grid contact_me_grid empty_border">
+
+				<h2 class="contactme_header">Contact Me</h2>
+
+				<div class="contact_inform">
+					<h3 class="bg_body_header">
+						<a href="mailto:allisonchinglee@gmail.com" target="_top">allisonchinglee@gmail.come</a>
+					</h3>
+					<div class="contactme_social_icon social_icon_flex">
+						<div class="social_icon ig"><a class="social_icons" href="https://www.instagram.com/ching2lcc/?hl=en"><img class="instagram_icon" src="img/instagram_icon.png" alt="myIG"></a></div>
+
+						<div class="social_icon twitter"><a class="social_icons" href="https://twitter.com/chingchinglcc"><img class="twitter_icon" src="img/twitter_icon.png" alt="myTwitter"></a></div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="empty_border innerpage_context_empty_box03"></div>	
+			<div class="empty_border innerpage_context_empty_box04"></div>	
+				
+		</div>
+
+		<footer>
+			<div class="footer_logo"><img class="twitter_icon" src="img/footer_white_logo.png" alt="siteLogo"></div>
+			<p class="footer_copyright">&copy; Ching Ching Lee 2018</p>
+		</footer>
+	</div>
+
+	<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
+	<script type="text/javascript" src="js/scrollmagic/minified/ScrollMagic.min.js"></script>
+	<script type="text/javascript" src="js/scrollmagic/minified/plugins/debug.addIndicators.min.js"></script>
+	<script type="text/javascript" src=js/scrollmagic/minified/plugins/animation.gsap.min.js></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
-
