--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<a class="primary_nav_logo_link" href="index.html"><img class="sitelogo" src="img/sitelogo.png" alt="siteLogo"></a>
 				</div>
 				<ul class="primary_nav_ul primary_nav_effect">
-					<li class="primary_nav_item primary_nav_current"><a class="primary_nav_item_link" href="index.html">Home</a></li>
+					<li class="primary_nav_item"><a class="primary_nav_item_link" href="index.html">Home</a></li>
 					<li class="primary_nav_item"><a class="primary_nav_item_link" href="web.html">Website</a></li>
 					<li class="primary_nav_item"><a class="primary_nav_item_link" href="graphic.html">Graphic</a></li>
 					<li class="primary_nav_item"><a class="primary_nav_item_link" href="about.html">About</a></li>
@@ -126,7 +126,13 @@
 			<p class="footer_copyright">&copy; Ching Ching Lee 2018</p>
 		</footer>
 	</div>
-	
+
+	<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.2/TweenMax.min.js"></script>
+	<script type="text/javascript" src="js/scrollmagic/minified/ScrollMagic.min.js"></script>
+	<script type="text/javascript" src="js/scrollmagic/minified/plugins/debug.addIndicators.min.js"></script>
+	<script type="text/javascript" src=js/scrollmagic/minified/plugins/animation.gsap.min.js></script>
+	<script type="text/javascript" src="js/main.js"></script>
 
 </body>
 </html>
