--- a/graphic.html
+++ b/graphic.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Ching Ching | Graphic Design</title>
+	<link rel="shortcut icon" type="image/x-icon" href="#"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
